--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,7 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.alxmag.composerizeintellijplugin
-pluginName = composerize-intellij-plugin
+pluginGroup = com.github.alxmag.doki
+pluginName = Docker Run Command to Compose Converter
 pluginRepositoryUrl = https://github.com/alx-mag/composerize-intellij-plugin
 # SemVer format -> https://semver.org
 pluginVersion = 0.0.1
