--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
     <id>com.github.alxmag.doki</id>
-    <name>Doki</name>
+    <name>Docker Run Command to Compose Converter</name>
     <vendor>alx-mag</vendor>
 
     <depends>com.intellij.modules.platform</depends>
