--- a/gradle.properties
+++ b/gradle.properties
@@ -1,14 +1,14 @@
 # IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
 
-pluginGroup = com.github.alxmag.doki
+pluginGroup = com.github.alxmag.dcp
 pluginName = Docker Run Command to Compose Converter
 pluginRepositoryUrl = https://github.com/alx-mag/composerize-intellij-plugin
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 1.0.0
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 223
-pluginUntilBuild = 233.*
+# pluginUntilBuild = 233.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IC
