--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,8 +1,8 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.alxmag.doki</id>
+    <id>com.github.alxmag.dcp</id>
     <name>Docker Run Command to Compose Converter</name>
-    <vendor>alx-mag</vendor>
+    <vendor>Poor Guy</vendor>
 
     <depends>com.intellij.modules.platform</depends>
     <depends>org.jetbrains.plugins.yaml</depends>
