--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,6 +1,6 @@
 <!-- Plugin Configuration File. Read more: https://plugins.jetbrains.com/docs/intellij/plugin-configuration-file.html -->
 <idea-plugin>
-    <id>com.github.alxmag.dcp</id>
+    <id>alxmag.dcp</id>
     <name>Docker Run Command to Compose Converter</name>
     <vendor>Poor Guy</vendor>
 
